todas las paginas full sass

--- a/Pages/Servicios.html
+++ b/Pages/Servicios.html
@@ -9,7 +9,8 @@
     <link rel="shortcut icon" href="../Images/logo-pestaña.svg">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-    <link rel="stylesheet" href="../Css/Style.css">
+    <!-- <link rel="stylesheet" href="../Css/Style.css"> -->
+    <link rel="stylesheet" href="../Css/translated.css">
     <title>SERVICIOS - City Hotel Boutique</title>
 </head>
 <body>
@@ -24,7 +25,7 @@
                 <ul class="navbar-nav me-auto ms-auto header__pages">
                     <li class="nav-item"><a class="header__pages__link nav-link" href="../index.html">HOME</a></li>
                     <li class="nav-item"><a class="header__pages__link nav-link" href="./Habitaciones.html">HABITACIONES</a></li>
-                    <li class="nav-item"><a class="header__pages__link nav-link main--link" href="./Servicios.html">SERVICIOS</a></li>
+                    <li class="nav-item"><a class="header__pages__link nav-link header__main--link" href="./Servicios.html">SERVICIOS</a></li>
                     <li class="nav-item"><a class="header__pages__link nav-link" href="./Galeria.html">GALERIA</a></li>
                     <li class="nav-item"><a class="header__pages__link nav-link" href="./Contacto.html">CONTACTO</a></li>
                 </ul>
@@ -60,7 +61,7 @@
                         <li>-Asesoramiento y asistencia en reservas de shows, restaurantes, teatros y excursiones</li>
                     </ul> 
                 </div>
-                <div id="carouselExampleControls5" data-aos="fade-right" class="carousel slide container__carousel" data-bs-ride="carousel">
+                <div id="carouselExampleControls5" data-aos="fade-right" class="carousel slide service__container__carousel" data-bs-ride="carousel">
                     <div class="carousel-inner">
                         <div class="carousel-item active">
                         <img class="service__img" src="../Images/Servicios-buffet-incluidos.jpg" alt="servicios incluidos">
@@ -83,7 +84,7 @@
                 </div>
             </article>
             <article class="service__reverse">
-                <div class="service__text" data-aos="fade-right">
+                <div class="service__reverse__text" data-aos="fade-right">
                     <h2 class="subtitle text--yellow">OPCIONALES</h2><br>
                     <ul>
                         <li>-Estacionamiento</li>
@@ -98,7 +99,7 @@
                         <li>-Agencia de viajes y Turismo</li>
                     </ul>
                 </div>
-                <div id="carouselExampleControls6" data-aos="fade-right" class="carousel slide container__carousel" data-bs-ride="carousel">
+                <div id="carouselExampleControls6" data-aos="fade-right" class="carousel slide service__reverse__container__carousel" data-bs-ride="carousel">
                     <div class="carousel-inner">
                         <div class="carousel-item active">
                         <img class="service__img" src="../Images/Servicios-bus-opcionales.jpg" alt="servicios opcionales">
@@ -134,7 +135,7 @@
                         <li>-Pequeña piscina</li>
                     </ul>
                 </div>
-                <div id="carouselExampleControls7" data-aos="fade-right" class="carousel slide container__carousel" data-bs-ride="carousel">
+                <div id="carouselExampleControls7" data-aos="fade-right" class="carousel slide service__container__carousel" data-bs-ride="carousel">
                     <div class="carousel-inner">
                         <div class="carousel-item active">
                         <img class="service__img" src="../Images/Servicios-spa-masajes.jpg" alt="servicios spa">
@@ -195,7 +196,7 @@
                     <ul class="footer__nav__pages">
                         <li><a class="footer__pages__link" href="../index.html">HOME</a></li>
                         <li><a class="footer__pages__link" href="./Habitaciones.html">HABITACIONES</a></li>
-                        <li><a class="footer__pages__link main--link" href="./Servicios.html">SERVICIOS</a></li>
+                        <li><a class="footer__pages__link footer__main--link" href="./Servicios.html">SERVICIOS</a></li>
                         <li><a class="footer__pages__link" href="./Galeria.html">GALERIA</a></li>
                         <li><a class="footer__pages__link" href="./Contacto.html">CONTACTO</a></li>
                     </ul>
