--- a/Pages/Contacto.html
+++ b/Pages/Contacto.html
@@ -9,7 +9,8 @@
     <link rel="shortcut icon" href="../Images/logo-pestaña.svg">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-    <link rel="stylesheet" href="../Css/Style.css">
+    <!-- <link rel="stylesheet" href="../Css/Style.css"> -->
+    <link rel="stylesheet" href="../Css/translated.css">
     <title>CONTACTO - City Hotel Boutique</title>
 </head>
 <body>
@@ -26,7 +27,7 @@
                     <li class="nav-item"><a class="header__pages__link nav-link" href="./Habitaciones.html">HABITACIONES</a></li>
                     <li class="nav-item"><a class="header__pages__link nav-link" href="./Servicios.html">SERVICIOS</a></li>
                     <li class="nav-item"><a class="header__pages__link nav-link" href="./Galeria.html">GALERIA</a></li>
-                    <li class="nav-item"><a class="header__pages__link nav-link main--link" href="./Contacto.html">CONTACTO</a></li>
+                    <li class="nav-item"><a class="header__pages__link nav-link header__main--link" href="./Contacto.html">CONTACTO</a></li>
                 </ul>
                 <section class="header__social d-flex flex-row justify-content-center">
                     <a href=""><img class="header__social__link" src="../Images/instagram.svg" alt="instagram"></a>
@@ -60,13 +61,13 @@
                 <section class="contact" data-aos="zoom-in">
                     <form class="contact__form" action="" method="post">
                         <label class="text--white" for="name">Nombre:</label>
-                        <input class="contact__data" type="text" name="name" id="name" required>
+                        <input class="contact__form__data" type="text" name="name" id="name" required>
                         <label class="text--white" for="email">Email:</label>
-                        <input class="contact__data" type="email" name="email" id="email" required>
+                        <input class="contact__form__data" type="email" name="email" id="email" required>
                         <label class="text--white" for="phone">Telefono:</label>
-                        <input class="contact__data" type="tel" name="phone" id="phone" required>
+                        <input class="contact__form__data" type="tel" name="phone" id="phone" required>
                         <label class="text--white" for="mensaje">Mensaje:</label><br>
-                        <textarea class="contact__data" name="mensaje" id="mensaje" cols="30" rows="10"></textarea>
+                        <textarea class="contact__form__data" name="mensaje" id="mensaje" cols="30" rows="10"></textarea>
                         <button type="submit">Enviar</button>
                     </form>
                 </section>
@@ -100,7 +101,7 @@
                         <li><a class="footer__pages__link" href="./Habitaciones.html">HABITACIONES</a></li>
                         <li><a class="footer__pages__link" href="./Servicios.html">SERVICIOS</a></li>
                         <li><a class="footer__pages__link" href="./Galeria.html">GALERIA</a></li>
-                        <li><a class="footer__pages__link main--link" href="./Contacto.html">CONTACTO</a></li>
+                        <li><a class="footer__pages__link footer__main--link" href="./Contacto.html">CONTACTO</a></li>
                     </ul>
                 </nav> 
                 <h3 class="text--yellow">Diseñado por Agustin Pousa</h3>  
