--- a/Pages/Galeria.html
+++ b/Pages/Galeria.html
@@ -9,7 +9,8 @@
     <link rel="shortcut icon" href="../Images/logo-pestaña.svg">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-    <link rel="stylesheet" href="../Css/Style.css">
+    <!-- <link rel="stylesheet" href="../Css/Style.css"> -->
+    <link rel="stylesheet" href="../Css/translated.css">
     <title>GALERIA - City Hotel Boutique</title>
 </head>
 <body>
@@ -25,7 +26,7 @@
                     <li class="nav-item"><a class="header__pages__link nav-link" href="../index.html">HOME</a></li>
                     <li class="nav-item"><a class="header__pages__link nav-link" href="./Habitaciones.html">HABITACIONES</a></li>
                     <li class="nav-item"><a class="header__pages__link nav-link" href="./Servicios.html">SERVICIOS</a></li>
-                    <li class="nav-item"><a class="header__pages__link nav-link main--link" href="./Galeria.html">GALERIA</a></li>
+                    <li class="nav-item"><a class="header__pages__link nav-link header__main--link" href="./Galeria.html">GALERIA</a></li>
                     <li class="nav-item"><a class="header__pages__link nav-link" href="./Contacto.html">CONTACTO</a></li>
                 </ul>
                 <section class="header__social d-flex flex-row justify-content-center">
@@ -45,10 +46,10 @@
          <h2 class="title text--yellow">CONOCE NUESTRAS INSTALACIONES</h2>
             <section class="galery">
                 <img data-aos="flip-up" src="../Images/galeria-1.jpg" alt="habitacion hotel">
-                <img data-aos="flip-up" src="../Images/galeria-2.jpg" alt="baño hotal">
-                <img data-aos="flip-up" src="../Images/galeria-3.jpg" alt="spa hotal">
+                <img data-aos="flip-up" src="../Images/galeria-2.jpg" alt="baño hotel">
+                <img data-aos="flip-up" src="../Images/galeria-3.jpg" alt="spa hotel">
                 <img data-aos="flip-up" src="../Images/galeria-4.jpg" alt="picina hotal">
-                <img data-aos="flip-up" src="../Images/galeria-5.jpg" alt="sala reuniones hotal">
+                <img data-aos="flip-up" src="../Images/galeria-5.jpg" alt="sala reuniones hotel">
                 <img data-aos="flip-up" src="../Images/galeria-6.jpg" alt="habitacion hotel">
                 <img data-aos="flip-up" src="../Images/galeria-7.jpg" alt="habitacion hotel">
                 <img data-aos="flip-up" src="../Images/galeria-8.jpg" alt="habitacion hotel">
@@ -94,7 +95,7 @@
                         <li><a class="footer__pages__link" href="../index.html">HOME</a></li>
                         <li><a class="footer__pages__link" href="./Habitaciones.html">HABITACIONES</a></li>
                         <li><a class="footer__pages__link" href="./Servicios.html">SERVICIOS</a></li>
-                        <li><a class="footer__pages__link main--link" href="./Galeria.html">GALERIA</a></li>
+                        <li><a class="footer__pages__link footer__main--link" href="./Galeria.html">GALERIA</a></li>
                         <li><a class="footer__pages__link" href="./Contacto.html">CONTACTO</a></li>
                     </ul>
                 </nav> 
