--- a/Pages/Habitaciones.html
+++ b/Pages/Habitaciones.html
@@ -9,7 +9,8 @@
     <link rel="shortcut icon" href="../Images/logo-pestaña.svg">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-    <link rel="stylesheet" href="../Css/Style.css">
+    <!-- <link rel="stylesheet" href="../Css/Style.css"> -->
+    <link rel="stylesheet" href="../Css/translated.css">
     <title>HABITACIONES - City Hotel Boutique</title>
 </head>
 <body>
@@ -23,7 +24,7 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto ms-auto header__pages">
                     <li class="nav-item"><a class="header__pages__link nav-link" href="../index.html">HOME</a></li>
-                    <li class="nav-item"><a class="header__pages__link nav-link main--link" href="./Habitaciones.html">HABITACIONES</a></li>
+                    <li class="nav-item"><a class="header__pages__link nav-link header__main--link" href="./Habitaciones.html">HABITACIONES</a></li>
                     <li class="nav-item"><a class="header__pages__link nav-link" href="./Servicios.html">SERVICIOS</a></li>
                     <li class="nav-item"><a class="header__pages__link nav-link" href="./Galeria.html">GALERIA</a></li>
                     <li class="nav-item"><a class="header__pages__link nav-link" href="./Contacto.html">CONTACTO</a></li>
@@ -50,7 +51,7 @@
                         Escritorio de trabajo, Personal Bar, Smart TV, Notebook (a pedido), Teléfono inalámbrico, Conexión Wi-Fi sin cargo, Secador y Productos de tocador, Plancha de pelo (a pedido), Caja de seguridad con capacidad para notebook, Control de temperatura individual, Equipo de yoga (a pedido)
                     </p>
                 </div>
-                <div id="carouselExampleControls2" data-aos="fade-right" class="carousel slide container__carousel" data-bs-ride="carousel">
+                <div id="carouselExampleControls2" data-aos="fade-right" class="carousel slide room__container__carousel" data-bs-ride="carousel">
                     <div class="carousel-inner">
                         <div class="carousel-item active">
                         <img class="room__img" src="../Images/Habitacion-Standard-1.jpg" alt="habitacion Doble Estandar">
@@ -73,13 +74,13 @@
                 </div>
             </article>
             <article class="room__reverse">
-                <div class="room__text" data-aos="fade-right">
+                <div class="room__reverse__text" data-aos="fade-right">
                     <h2 class="subtitle text--yellow">Habitación Doble Superior</h2><br>
                     <p>
                         Diseño exclusivo, Amplio escritorio de trabajo, Personal Bar, Batas y pantuflas, Smart TV, Notebook (a pedido), Teléfono inalámbrico, Cafetera Nespresso, Conexión Wi-Fi sin cargo, Secador de pelo, Amenities exclusivos, Plancha de pelo (a pedido), Caja de seguridad con capacidad para notebook, Control de temperatura individual, Equipo de yoga (a pedido).
                     </p>
                 </div>
-                <div id="carouselExampleControls3" data-aos="fade-right" class="carousel slide container__carousel" data-bs-ride="carousel">
+                <div id="carouselExampleControls3" data-aos="fade-right" class="carousel slide room__reverse__container__carousel" data-bs-ride="carousel">
                     <div class="carousel-inner">
                         <div class="carousel-item active">
                         <img class="room__img" src="../Images/habitacion-superior-1.jpg" alt="habitacion Doble Superior">
@@ -108,7 +109,7 @@
                         Hirdomasaje para 2 personas, Escritorios de trabajo, Diseño exclusivo, Personal bar, Cafetera Nespresso, Batas y pantuflas, 2 Smart TV, Teléfono inalámbrico, Conexión wi-fi sin cargo, Secador de pelo, Plancha de pelo (a pedido), Amenities exclusivos, Caja de seguridad para notebook, Control de temperatura individual, Equipo de yoga (a pedido).
                     </p>
                 </div>
-                <div id="carouselExampleControls4" data-aos="fade-right" class="carousel slide container__carousel" data-bs-ride="carousel">
+                <div id="carouselExampleControls4" data-aos="fade-right" class="carousel slide room__container__carousel" data-bs-ride="carousel">
                     <div class="carousel-inner">
                         <div class="carousel-item active">
                         <img class="room__img" src="../Images/Jacuzzi-Suite-Deluxe-1.jpg" alt="habitacion Deluxer Jacuzzi">
@@ -166,7 +167,7 @@
                 <nav class="footer__nav">
                     <ul class="footer__nav__pages">
                         <li><a class="footer__pages__link" href="../index.html">HOME</a></li>
-                        <li><a class="footer__pages__link main--link" href="./Habitaciones.html">HABITACIONES</a></li>
+                        <li><a class="footer__pages__link footer__main--link" href="./Habitaciones.html">HABITACIONES</a></li>
                         <li><a class="footer__pages__link" href="./Servicios.html">SERVICIOS</a></li>
                         <li><a class="footer__pages__link" href="./Galeria.html">GALERIA</a></li>
                         <li><a class="footer__pages__link" href="./Contacto.html">CONTACTO</a></li>
