--- a/Pages/Contacto.html
+++ b/Pages/Contacto.html
@@ -9,7 +9,6 @@
     <link rel="shortcut icon" href="../Images/logo-pestaña.svg">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-    <!-- <link rel="stylesheet" href="../Css/Style.css"> -->
     <link rel="stylesheet" href="../Css/translated.css">
     <title>CONTACTO - City Hotel Boutique</title>
 </head>
@@ -30,9 +29,9 @@
                     <li class="nav-item"><a class="header__pages__link nav-link header__main--link" href="./Contacto.html">CONTACTO</a></li>
                 </ul>
                 <section class="header__social d-flex flex-row justify-content-center">
-                    <a href=""><img class="header__social__link" src="../Images/instagram.svg" alt="instagram"></a>
-                    <a href=""><img class="header__social__link" src="../Images/facebook.svg" alt="facebook"></a>
-                    <a href=""><img class="header__social__link" src="../Images/tripadvisor.svg" alt="tripadvisor"></a>
+                    <a href="https://www.instagram.com/"><img class="header__social__link" src="../Images/instagram.svg" alt="instagram"></a>
+                    <a href="https://www.facebook.com/"><img class="header__social__link" src="../Images/facebook.svg" alt="facebook"></a>
+                    <a href="https://www.tripadvisor.com/"><img class="header__social__link" src="../Images/tripadvisor.svg" alt="tripadvisor"></a>
                 </section>
             </div>
         </div>
@@ -84,15 +83,15 @@
                 <div class="footer__info__contact">
                     <h2 class="subtitle text--yellow footer__title">CANALES DE CONTACTO</h2>
                     <ul class="footer__info__contact__link">
-                        <li><a class="footer__pages__link" href="">Av. de Mayo 1496</a></li>
-                        <li><a class="footer__pages__link" href="">+54 (911) 3511-5453</a></li>
-                        <li><a class="footer__pages__link" href="">info@cityhotel.com.ar</a></li>
+                        <li><a class="footer__pages__link" href="https://goo.gl/maps/jCUXzg1rKR6EjMCk9">Av. de Mayo 1496</a></li>
+                        <li><a class="footer__pages__link" href="https://www.whatsapp.com/">+54 (911) 3511-5453</a></li>
+                        <li><a class="footer__pages__link" href="https://mail.google.com/mail/u/0/#inbox">info@cityhotel.com.ar</a></li>
                     </ul>
                 </div>
                 <div class="footer__info__social">
-                    <a href=""><img class="footer__social__link" src="../Images/instagram.svg" alt="instagram"></a>
-                    <a href=""><img class="footer__social__link" src="../Images/facebook.svg" alt="facebook"></a>
-                    <a href=""><img class="footer__social__link" src="../Images/tripadvisor.svg" alt="tripadvisor"></a>
+                    <a href="https://www.instagram.com/"><img class="footer__social__link" src="../Images/instagram.svg" alt="instagram"></a>
+                    <a href="https://www.facebook.com/"><img class="footer__social__link" src="../Images/facebook.svg" alt="facebook"></a>
+                    <a href="https://www.tripadvisor.com/"><img class="footer__social__link" src="../Images/tripadvisor.svg" alt="tripadvisor"></a>
                 </div>
             </article>
                 <nav class="footer__nav">
