--- a/Pages/Galeria.html
+++ b/Pages/Galeria.html
@@ -9,7 +9,7 @@
     <link rel="shortcut icon" href="../Images/logo-pestaña.svg">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-    <link rel="stylesheet" href="../Css/translated.css">
+    <link rel="stylesheet" href="../Css/index.css">
     <title>GALERIA - City Hotel Boutique</title>
 </head>
 <body>
