se agrego pagina reservar para trabajar JS

--- a/Pages/Habitaciones.html
+++ b/Pages/Habitaciones.html
@@ -26,6 +26,7 @@
                     <li class="nav-item"><a class="header__pages__link nav-link header__main--link" href="./Habitaciones.html">HABITACIONES</a></li>
                     <li class="nav-item"><a class="header__pages__link nav-link" href="./Servicios.html">SERVICIOS</a></li>
                     <li class="nav-item"><a class="header__pages__link nav-link" href="./Galeria.html">GALERIA</a></li>
+                    <li class="nav-item"><a class="header__pages__link nav-link" href="./Reservar.html">RESERVAR</a></li>
                     <li class="nav-item"><a class="header__pages__link nav-link" href="./Contacto.html">CONTACTO</a></li>
                 </ul>
                 <section class="header__social d-flex flex-row justify-content-center">
@@ -48,6 +49,9 @@
                     <h2 class="subtitle text--yellow">Habitación Doble Estandar</h2><br>
                     <p>
                         Escritorio de trabajo, Personal Bar, Smart TV, Notebook (a pedido), Teléfono inalámbrico, Conexión Wi-Fi sin cargo, Secador y Productos de tocador, Plancha de pelo (a pedido), Caja de seguridad con capacidad para notebook, Control de temperatura individual, Equipo de yoga (a pedido)
+                    </p><br>
+                    <p class="text--yellow">
+                       <strong>$10.000 Por noche.</strong> 
                     </p>
                 </div>
                 <div id="carouselExampleControls2" data-aos="fade-right" class="carousel slide room__container__carousel" data-bs-ride="carousel">
@@ -77,7 +81,10 @@
                     <h2 class="subtitle text--yellow">Habitación Doble Superior</h2><br>
                     <p>
                         Diseño exclusivo, Amplio escritorio de trabajo, Personal Bar, Batas y pantuflas, Smart TV, Notebook (a pedido), Teléfono inalámbrico, Cafetera Nespresso, Conexión Wi-Fi sin cargo, Secador de pelo, Amenities exclusivos, Plancha de pelo (a pedido), Caja de seguridad con capacidad para notebook, Control de temperatura individual, Equipo de yoga (a pedido).
-                    </p>
+                    </p><br>
+                    <p class="text--yellow">
+                        <strong>$15.000 Por noche.</strong> 
+                     </p>
                 </div>
                 <div id="carouselExampleControls3" data-aos="fade-right" class="carousel slide room__reverse__container__carousel" data-bs-ride="carousel">
                     <div class="carousel-inner">
@@ -106,7 +113,10 @@
                     <h2 class="subtitle text--yellow">Habitación Deluxer</h2><br>
                     <p>
                         Hirdomasaje para 2 personas, Escritorios de trabajo, Diseño exclusivo, Personal bar, Cafetera Nespresso, Batas y pantuflas, 2 Smart TV, Teléfono inalámbrico, Conexión wi-fi sin cargo, Secador de pelo, Plancha de pelo (a pedido), Amenities exclusivos, Caja de seguridad para notebook, Control de temperatura individual, Equipo de yoga (a pedido).
-                    </p>
+                    </p><br>
+                    <p class="text--yellow">
+                        <strong>$25.000 Por noche.</strong> 
+                     </p>
                 </div>
                 <div id="carouselExampleControls4" data-aos="fade-right" class="carousel slide room__container__carousel" data-bs-ride="carousel">
                     <div class="carousel-inner">
@@ -169,6 +179,7 @@
                         <li><a class="footer__pages__link footer__main--link" href="./Habitaciones.html">HABITACIONES</a></li>
                         <li><a class="footer__pages__link" href="./Servicios.html">SERVICIOS</a></li>
                         <li><a class="footer__pages__link" href="./Galeria.html">GALERIA</a></li>
+                        <li><a class="footer__pages__link" href="./Reservar.html">RESERVAR</a></li>
                         <li><a class="footer__pages__link" href="./Contacto.html">CONTACTO</a></li>
                     </ul>
                 </nav> 
