--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
                     <li class="nav-item"><a class="header__pages__link nav-link" href="./Pages/Habitaciones.html">HABITACIONES</a></li>
                     <li class="nav-item"><a class="header__pages__link nav-link" href="./Pages/Servicios.html">SERVICIOS</a></li>
                     <li class="nav-item"><a class="header__pages__link nav-link" href="./Pages/Galeria.html">GALERIA</a></li>
+                    <li class="nav-item"><a class="header__pages__link nav-link" href="./Pages/Reservar.html">RESERVAR</a></li>
                     <li class="nav-item"><a class="header__pages__link nav-link" href="./Pages/Contacto.html">CONTACTO</a></li>
                 </ul>
                 <section class="header__social d-flex flex-row justify-content-center">
@@ -211,6 +212,7 @@
                         <li><a class="footer__pages__link" href="./Pages/Habitaciones.html">HABITACIONES</a></li>
                         <li><a class="footer__pages__link" href="./Pages/Servicios.html">SERVICIOS</a></li>
                         <li><a class="footer__pages__link" href="./Pages/Galeria.html">GALERIA</a></li>
+                        <li><a class="footer__pages__link" href="./Pages/Reservar.html">RESERVAR</a></li>
                         <li><a class="footer__pages__link" href="./Pages/Contacto.html">CONTACTO</a></li>
                     </ul>
                 </nav> 
