--- a/Pages/Contacto.html
+++ b/Pages/Contacto.html
@@ -26,6 +26,7 @@
                     <li class="nav-item"><a class="header__pages__link nav-link" href="./Habitaciones.html">HABITACIONES</a></li>
                     <li class="nav-item"><a class="header__pages__link nav-link" href="./Servicios.html">SERVICIOS</a></li>
                     <li class="nav-item"><a class="header__pages__link nav-link" href="./Galeria.html">GALERIA</a></li>
+                    <li class="nav-item"><a class="header__pages__link nav-link" href="./Reservar.html">RESERVAR</a></li>
                     <li class="nav-item"><a class="header__pages__link nav-link header__main--link" href="./Contacto.html">CONTACTO</a></li>
                 </ul>
                 <section class="header__social d-flex flex-row justify-content-center">
@@ -100,6 +101,7 @@
                         <li><a class="footer__pages__link" href="./Habitaciones.html">HABITACIONES</a></li>
                         <li><a class="footer__pages__link" href="./Servicios.html">SERVICIOS</a></li>
                         <li><a class="footer__pages__link" href="./Galeria.html">GALERIA</a></li>
+                        <li><a class="footer__pages__link" href="./Reservar.html">RESERVAR</a></li>
                         <li><a class="footer__pages__link footer__main--link" href="./Contacto.html">CONTACTO</a></li>
                     </ul>
                 </nav> 
