--- a/Pages/Reservar.html
+++ b/Pages/Reservar.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="En City hotel boutique encontras todo lo que buscas de tu hospedaje en un solo lugar">
+    <meta name="description" content="Reserva nuestras habitaciones, servicios y extras.">
     <meta name="keywords" content="hotel, hoteleria, hotel boutique, city hotel boutique, turismo, caba, ciudad de buenos aires, buenos aires, capital federal, habitaciones, habitaciones deluxe, restaurante, restaurante mezcal, spa, picina, hotel en el centro, masajes">
     <link rel="shortcut icon" href="../Images/logo-pestaña.svg">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="../Css/index.css">
-    <title>GALERIA - City Hotel Boutique</title>
+    <title>RESERVAR - City Hotel Boutique</title>
 </head>
 <body>
 <!-- INICIO DEL HEADER -->
@@ -25,9 +25,9 @@
                     <li class="nav-item"><a class="header__pages__link nav-link" href="../index.html">HOME</a></li>
                     <li class="nav-item"><a class="header__pages__link nav-link" href="./Habitaciones.html">HABITACIONES</a></li>
                     <li class="nav-item"><a class="header__pages__link nav-link" href="./Servicios.html">SERVICIOS</a></li>
-                    <li class="nav-item"><a class="header__pages__link nav-link header__main--link" href="./Galeria.html">GALERIA</a></li>
-                    <li class="nav-item"><a class="header__pages__link nav-link" href="./Reservar.html">RESERVAR</a></li>
-                    <li class="nav-item"><a class="header__pages__link nav-link" href="./Contacto.html">CONTACTO</a></li>
+                    <li class="nav-item"><a class="header__pages__link nav-link" href="./Galeria.html">GALERIA</a></li>
+                    <li class="nav-item"><a class="header__pages__link nav-link header__main--link" href="./Reservar.html">RESERVAR</a></li>
+                    <li class="nav-item"><a class="header__pages__link nav-link " href="./Contacto.html">CONTACTO</a></li>
                 </ul>
                 <section class="header__social d-flex flex-row justify-content-center">
                     <a href="https://www.instagram.com/"><img class="header__social__link" src="../Images/instagram.svg" alt="instagram"></a>
@@ -38,39 +38,11 @@
         </div>
     </header>
 <!-- FIN DEL HEADER       -->
-<!-- MAIN DE LA PAGINA -->
-    <section class="top__image--galery">
-        <h1 class="top__text"><span class="top__background">GALERIA</span></h1>
-    </section>
+<!-- INICIO DEL MAIN -->
     <main>
-         <h2 class="title text--yellow">CONOCE NUESTRAS INSTALACIONES</h2>
-            <section class="galery">
-                <img data-aos="flip-up" src="../Images/galeria-1.jpg" alt="habitacion hotel">
-                <img data-aos="flip-up" src="../Images/galeria-2.jpg" alt="baño hotel">
-                <img data-aos="flip-up" src="../Images/galeria-3.jpg" alt="spa hotel">
-                <img data-aos="flip-up" src="../Images/galeria-4.jpg" alt="picina hotal">
-                <img data-aos="flip-up" src="../Images/galeria-5.jpg" alt="sala reuniones hotel">
-                <img data-aos="flip-up" src="../Images/galeria-6.jpg" alt="habitacion hotel">
-                <img data-aos="flip-up" src="../Images/galeria-7.jpg" alt="habitacion hotel">
-                <img data-aos="flip-up" src="../Images/galeria-8.jpg" alt="habitacion hotel">
-                <img data-aos="flip-up" src="../Images/galeria-9.jpg" alt="loby hotel">
-                <img data-aos="flip-up" src="../Images/galeria-10.jpg" alt="jacusi hotel">
-                <img data-aos="flip-up" src="../Images/galeria-11.jpg" alt="patio hotel">
-                <img data-aos="flip-up" src="../Images/galeria-12.jpg" alt="bufette hotel">
-            </section>
-            <section class="form1">
-                <form class="form1__checkin" action="" method="post" data-aos="zoom-in">
-                    <label class="text--white" for="check-in">Check In</label>
-                    <input class="form1__data" type="date" name="check-in" id="check-in" required>
-                    <label class="text--white" for="check-out">Check Out</label>
-                    <input class="form1__data" type="date" name="check-out" id="check-out" required>
-                    <label class="text--white" for="guest">Huéspedes</label>
-                    <input class="form1__data" type="number" name="guest" id="guest" required>
-                    <button type="submit">RESERVAR</button>
-                </form>
-            </section>
+       
     </main>
-<!-- FIN MAIN DE LA PAGINA -->
+<!-- FIN DEL MAIN -->
 <!-- INICIO DEL FOOTER -->
     <footer class="footer">
         <section class="footer__container">
@@ -95,8 +67,8 @@
                         <li><a class="footer__pages__link" href="../index.html">HOME</a></li>
                         <li><a class="footer__pages__link" href="./Habitaciones.html">HABITACIONES</a></li>
                         <li><a class="footer__pages__link" href="./Servicios.html">SERVICIOS</a></li>
-                        <li><a class="footer__pages__link footer__main--link" href="./Galeria.html">GALERIA</a></li>
-                        <li><a class="footer__pages__link" href="./Reservar.html">RESERVAR</a></li>
+                        <li><a class="footer__pages__link" href="./Galeria.html">GALERIA</a></li>
+                        <li><a class="footer__pages__link footer__main--link" href="./Reservar.html">RESERVAR</a></li>
                         <li><a class="footer__pages__link" href="./Contacto.html">CONTACTO</a></li>
                     </ul>
                 </nav> 
