--- a/Pages/Habitaciones.html
+++ b/Pages/Habitaciones.html
@@ -51,7 +51,7 @@
                         Escritorio de trabajo, Personal Bar, Smart TV, Notebook (a pedido), Teléfono inalámbrico, Conexión Wi-Fi sin cargo, Secador y Productos de tocador, Plancha de pelo (a pedido), Caja de seguridad con capacidad para notebook, Control de temperatura individual, Equipo de yoga (a pedido)
                     </p><br>
                     <p class="text--yellow">
-                       <strong>$10.000 Por noche.</strong> 
+                       <strong id="habitacion1"></strong> Por noche.
                     </p>
                 </div>
                 <div id="carouselExampleControls2" data-aos="fade-right" class="carousel slide room__container__carousel" data-bs-ride="carousel">
@@ -83,7 +83,7 @@
                         Diseño exclusivo, Amplio escritorio de trabajo, Personal Bar, Batas y pantuflas, Smart TV, Notebook (a pedido), Teléfono inalámbrico, Cafetera Nespresso, Conexión Wi-Fi sin cargo, Secador de pelo, Amenities exclusivos, Plancha de pelo (a pedido), Caja de seguridad con capacidad para notebook, Control de temperatura individual, Equipo de yoga (a pedido).
                     </p><br>
                     <p class="text--yellow">
-                        <strong>$15.000 Por noche.</strong> 
+                        <strong id="habitacion2"></strong> Por noche.
                      </p>
                 </div>
                 <div id="carouselExampleControls3" data-aos="fade-right" class="carousel slide room__reverse__container__carousel" data-bs-ride="carousel">
@@ -115,7 +115,7 @@
                         Hirdomasaje para 2 personas, Escritorios de trabajo, Diseño exclusivo, Personal bar, Cafetera Nespresso, Batas y pantuflas, 2 Smart TV, Teléfono inalámbrico, Conexión wi-fi sin cargo, Secador de pelo, Plancha de pelo (a pedido), Amenities exclusivos, Caja de seguridad para notebook, Control de temperatura individual, Equipo de yoga (a pedido).
                     </p><br>
                     <p class="text--yellow">
-                        <strong>$25.000 Por noche.</strong> 
+                        <strong id="habitacion3"></strong> Por noche. 
                      </p>
                 </div>
                 <div id="carouselExampleControls4" data-aos="fade-right" class="carousel slide room__container__carousel" data-bs-ride="carousel">
@@ -187,6 +187,7 @@
         </section>   
     </footer>
 <!-- FIN DEL FOOTER -->
+<script src="../js/class.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
 <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 <script>
