--- a/Pages/Admin.html
+++ b/Pages/Admin.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Reserva nuestras habitaciones, servicios y extras.">
+    <meta name="description" content="Nuestros canales de contacto estan habilitados las 24hs, para poder comunicarnos en todo momento y lugar.">
     <meta name="keywords" content="hotel, hoteleria, hotel boutique, city hotel boutique, turismo, caba, ciudad de buenos aires, buenos aires, capital federal, habitaciones, habitaciones deluxe, restaurante, restaurante mezcal, spa, picina, hotel en el centro, masajes">
     <link rel="shortcut icon" href="../Images/logo-pestaña.svg">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="../Css/index.css">
-    <title>RESERVAR - City Hotel Boutique</title>
+    <title>ADMIN - City Hotel Boutique</title>
 </head>
 <body>
 <!-- INICIO DEL HEADER -->
@@ -26,8 +26,8 @@
                     <li class="nav-item"><a class="header__pages__link nav-link" href="./Habitaciones.html">HABITACIONES</a></li>
                     <li class="nav-item"><a class="header__pages__link nav-link" href="./Servicios.html">SERVICIOS</a></li>
                     <li class="nav-item"><a class="header__pages__link nav-link" href="./Galeria.html">GALERIA</a></li>
-                    <li class="nav-item"><a class="header__pages__link nav-link header__main--link" href="./Reservar.html">RESERVAR</a></li>
-                    <li class="nav-item"><a class="header__pages__link nav-link " href="./Contacto.html">CONTACTO</a></li>
+                    <li class="nav-item"><a class="header__pages__link nav-link" href="./Reservar.html">RESERVAR</a></li>
+                    <li class="nav-item"><a class="header__pages__link nav-link header__main--link" href="./Contacto.html">CONTACTO</a></li>
                 </ul>
                 <section class="header__social d-flex flex-row justify-content-center">
                     <a href="https://www.instagram.com/"><img class="header__social__link" src="../Images/instagram.svg" alt="instagram"></a>
@@ -40,43 +40,21 @@
 <!-- FIN DEL HEADER       -->
 <!-- INICIO DEL MAIN -->
     <main>
-       
+        <!-- <section class="contact">
+            <form class="contact__form" action="" method="post">
+                <label class="text--white" for="precio_estandar">Precio hablitacion Doble Estandar</label>
+                <input type="number" name="precio_estandar" id="precioHabitacion1" required>
+                <label class="text--white" for="precio_superior">Precio hablitacion Doble Superior</label>
+                <input type="number" name="precio_superior" id="precioHabitacion2" required>
+                <label class="text--white" for="precio_deluxer">Precio hablitacion Deluxer</label>
+                <input type="number" name="precio_deluxer" id="precioHabitacion3" required>
+                <button type="button" id="btn">MODIFICAR PRECIO</button>
+            </form>
+        </section> -->
     </main>
 <!-- FIN DEL MAIN -->
-<!-- INICIO DEL FOOTER -->
-    <footer class="footer">
-        <section class="footer__container">
-            <article class="footer__info">
-                <a href="../index.html"><img class="footer__logo" src="../Images/logo-hotel.svg" alt="City Hotel Boutique"></a>
-                <div class="footer__info__contact">
-                    <h2 class="subtitle text--yellow footer__title">CANALES DE CONTACTO</h2>
-                    <ul class="footer__info__contact__link">
-                        <li><a class="footer__pages__link" href="https://goo.gl/maps/jCUXzg1rKR6EjMCk9">Av. de Mayo 1496</a></li>
-                        <li><a class="footer__pages__link" href="https://www.whatsapp.com/">+54 (911) 3511-5453</a></li>
-                        <li><a class="footer__pages__link" href="https://mail.google.com/mail/u/0/#inbox">info@cityhotel.com.ar</a></li>
-                    </ul>
-                </div>
-                <div class="footer__info__social">
-                    <a href="https://www.instagram.com/"><img class="footer__social__link" src="../Images/instagram.svg" alt="instagram"></a>
-                    <a href="https://www.facebook.com/"><img class="footer__social__link" src="../Images/facebook.svg" alt="facebook"></a>
-                    <a href="https://www.tripadvisor.com/"><img class="footer__social__link" src="../Images/tripadvisor.svg" alt="tripadvisor"></a>
-                </div>
-            </article>
-                <nav class="footer__nav">
-                    <ul class="footer__nav__pages">
-                        <li><a class="footer__pages__link" href="../index.html">HOME</a></li>
-                        <li><a class="footer__pages__link" href="./Habitaciones.html">HABITACIONES</a></li>
-                        <li><a class="footer__pages__link" href="./Servicios.html">SERVICIOS</a></li>
-                        <li><a class="footer__pages__link" href="./Galeria.html">GALERIA</a></li>
-                        <li><a class="footer__pages__link footer__main--link" href="./Reservar.html">RESERVAR</a></li>
-                        <li><a class="footer__pages__link" href="./Contacto.html">CONTACTO</a></li>
-                    </ul>
-                </nav> 
-                <h3 class="text--yellow">Diseñado por Agustin Pousa</h3>
-                <h4><a href="./Admin.html">admin</a></h4>  
-        </section>   
-    </footer>
-<!-- FIN DEL FOOTER -->
+<script src="../js/class.js"></script>
+<script src="../js/app1.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
 <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 <script>
