--- a/Pages/Contacto.html
+++ b/Pages/Contacto.html
@@ -105,7 +105,8 @@
                         <li><a class="footer__pages__link footer__main--link" href="./Contacto.html">CONTACTO</a></li>
                     </ul>
                 </nav> 
-                <h3 class="text--yellow">Diseñado por Agustin Pousa</h3>  
+                <h3 class="text--yellow">Diseñado por Agustin Pousa</h3> 
+                <h4><a href="./Admin.html">admin</a></h4> 
         </section>   
     </footer>
 <!-- FIN DEL FOOTER -->
