--- a/Pages/Habitaciones.html
+++ b/Pages/Habitaciones.html
@@ -152,6 +152,17 @@
                 <button type="submit">RESERVAR</button>
             </form>
         </section>
+        <section class="contact">
+            <form class="contact__form" action="" method="post">
+                <label class="text--white" for="precio_estandar">Precio hablitacion Doble Estandar</label>
+                <input type="number" name="precio_estandar" id="precioHabitacion1" required>
+                <label class="text--white" for="precio_superior">Precio hablitacion Doble Superior</label>
+                <input type="number" name="precio_superior" id="precioHabitacion2" required>
+                <label class="text--white" for="precio_deluxer">Precio hablitacion Deluxer</label>
+                <input type="number" name="precio_deluxer" id="precioHabitacion3" required>
+                <button type="button" id="btn">MODIFICAR PRECIO</button>
+            </form>
+        </section>
     </main>
 <!-- FIN MAIN DE LA PAGINA -->
 <!-- INICIO DEL FOOTER -->
@@ -183,11 +194,13 @@
                         <li><a class="footer__pages__link" href="./Contacto.html">CONTACTO</a></li>
                     </ul>
                 </nav> 
-                <h3 class="text--yellow">Diseñado por Agustin Pousa</h3>  
+                <h3 class="text--yellow">Diseñado por Agustin Pousa</h3> 
+                <h4><a href="./Admin.html">admin</a></h4>
         </section>   
     </footer>
 <!-- FIN DEL FOOTER -->
 <script src="../js/class.js"></script>
+<script src="../js/app1.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
 <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 <script>
