--- a/index.html
+++ b/index.html
@@ -216,12 +216,13 @@
                         <li><a class="footer__pages__link" href="./Pages/Contacto.html">CONTACTO</a></li>
                     </ul>
                 </nav> 
-                <h3 class="text--yellow">Diseñado por Agustin Pousa</h3>  
+                <h3 class="text--yellow">Diseñado por Agustin Pousa</h3>
+                <h4><a href="./Pages/Admin.html">admin</a></h4> 
         </section>   
     </footer>
 <!-- FIN DEL FOOTER -->
 <script src="./js/class.js"></script>
-<script src="./js/app.js"></script>
+<script src="./js/pregunta.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
 <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 <script>
